Fix Project section alignment issue

--- a/src/sections/Projects/ProjectsStyles.module.css
+++ b/src/sections/Projects/ProjectsStyles.module.css
@@ -4,8 +4,11 @@
     text-align: center;
 
     img {
-        max-width: 250px;
+        /*max-width: 200px;*/
+        width: 180px;
+        height: 180px; /* Ensures all images have the same height */
         align-self: center;
+        object-fit: cover; /* Keeps aspect ratio and fills the box */
         background-color: var(--project-card-bg);
         border-radius: 20px;
     }
@@ -25,7 +28,7 @@
 .projectsContainer {
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items: center;
     gap: 30px;
 }
 
@@ -35,5 +38,6 @@
         flex-wrap: wrap;
         justify-content: space-evenly;
         padding: 0 30px;
+        align-items: center;
     }
 }
